# ai-engineer

./: .gitignore  1_bmi_workflow.ipynb  4_2_nlp_identify_pos_and_names_entities.ipynb  4_3_nlp_sentiment_analysis.ipynb  6_quadratic_equation_workflow.ipynb  README.md
fastapi/: README.md  alembic.ini  requirements.txt
gen-ai/: .gitignore  README.md  pyproject.toml  requirements.txt
gen-ai/CineSage/: core.py
gen-ai/chatmodels/: chat.py  huggingface.py  localmodel.py
gen-ai/documents/: notes.txt
gen-ai/embeddingmodels/: embeddings.py
gen-ai/rag/: main.py
gen-ai/rag/chatbot/: create_database.py  main.py
gen-ai/rag/document_loader/: text_loader.py
gen-ai/rag/retrievers/: mmr.py
gen-ai/rag/text_splitter/: character_text_splitter.py  token_text_splitter.py
gen-ai/rag/vector_store/: database.py
lang-graph/: 2_simple_llm_workflow.ipynb  3_prompt_chaining.ipynb  4_batsman_workflow.ipynb  5_UPSC_essay_workflow.ipynb
langchain/: requirements.txt
machine-learning/: insurance.ipynb
matplotlib/: 1_matplotlib_basics.ipynb  2_seaborn_plots.ipynb  3_matplotib_seaborn.ipynb  3_plotly_cufflinks.ipynb  4_ipl_capstone_project.ipynb
nlp/: 4_1_nlp_text_preprocessing.ipynb
numpy/: 1_1_numpy_basics.ipynb  1_4_numpy_exercises.ipynb  1_numpy.ipynb  2_numpy_indexing_slicing.ipynb  3_numpy_operations.ipynb
opencv/: 1_opencv.ipynb  1_opencv_basics.ipynb  2_opencv_transformations.ipynb  3_opencv_processing.ipynb  4_opencv_drawing.ipynb  5_opencv_video.ipynb  6_gesture_control.ipynb  motion_detector.ipynb
pandas/: 1_pandas_basics.ipynb  2_pandas.ipynb  (+4 more)
(+184 files in other folders)
